# fashion-parser

./: .env.example  .gitignore  LICENSE  README.md  config.py  demo.ipynb  eda.ipynb  experiment.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
commons/: config.py  fashion_config.py  model_storage.py
data/: data_loader.py  fashion_data_set.py  sample_generator.py  test_generator_for_submission.py  utils.py
dl/: maskrcnn.py
experiments/: UNetExperiment.py  mask_rcnn_experiment.py  unet_experiment.py
model_repository/fashion_parser/: config.pbtxt
models/: fast_scnn.py  pa_net.py  unet.py  yolov3.py
monitoring/: tensorboard.py
mrcnn/: model.py  parallel_model.py
old_code/commons/: config.py  fashion_config.py
old_code/experiments/: mask_rcnn_experiment.py
old_code/fashion_parser_tf/: dataset.py  mask_rcnn_experiment.py  model_config.py
old_code/fashion_parser_tf/mrcnn/: model.py  parallel_model.py  utils.py  visualize.py
old_code/mrcnn/: utils.py
old_code/utils/: image_utils.py
src/fashion_parser/config/: settings.py
src/fashion_parser/models/: torch_mrcnn.py
src/fashion_parser/scripts/: export_triton.py  train_torch.py  triton_client.py
src/fashion_parser/utils/: image_utils.py
tests/: test_data_loader.py  test_fashion_config.py  test_fashion_data_set.py  test_image_utils.py
utils/: ai_utils.py  image_masker.py  image_utils.py  vectorizer.py
