[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fashion-parser"
version = "2.0.0"
description = "Fashion segmentation using Mask R-CNN on iMaterialist Fashion 2019 dataset"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cenk Corapci", email = "cenkcorapci@users.noreply.github.com"}
]
keywords = ["fashion", "segmentation", "mask-rcnn", "deep-learning", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "IPython[all]>=8.12.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "h5py>=3.8.0",
    "pydot>=1.4.2",
    "tqdm>=4.65.0",
    "scipy>=1.10.0",
    "scikit-image>=0.21.0",
    "tensorboard>=2.13.0",
    "tensorflow>=2.13.0,<2.17.0",
    "opencv-python>=4.8.0",
    "imgaug>=0.4.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/cenkcorapci/fashion-parser"
Repository = "https://github.com/cenkcorapci/fashion-parser"
Issues = "https://github.com/cenkcorapci/fashion-parser/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
